<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" android:background="@android:color/holo_blue_dark">
        <Button android:id="@+id/back_bt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/back"/>
        <TextView android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@android:color/holo_blue_dark"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <EditText android:id="@+id/edit_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
        <Button android:id="@+id/add_bt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginRight="10dp"
            android:text="@string/add"/>
    </LinearLayout>
    <ListView android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>
    <Button android:id="@+id/save_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"
        android:gravity="center"
        android:layout_gravity="bottom"/>
</LinearLayout>